; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/ssl/extr_packet.c_maxmaxsize.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/ssl/extr_packet.c_maxmaxsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIZE_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @maxmaxsize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @maxmaxsize(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = icmp uge i64 %4, 8
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i64, i64* %3, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %6, %1
  %10 = load i64, i64* @SIZE_MAX, align 8
  store i64 %10, i64* %2, align 8
  br label %18

11:                                               ; preds = %6
  %12 = load i64, i64* %3, align 8
  %13 = mul i64 %12, 8
  %14 = shl i64 1, %13
  %15 = sub i64 %14, 1
  %16 = load i64, i64* %3, align 8
  %17 = add i64 %15, %16
  store i64 %17, i64* %2, align 8
  br label %18

18:                                               ; preds = %11, %9
  %19 = load i64, i64* %2, align 8
  ret i64 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
